fix filter on mobile; redesign index page

--- a/VirtoCommerce.Storefront/App_Data/Themes/es/assets/styles/custom-style.css
+++ b/VirtoCommerce.Storefront/App_Data/Themes/es/assets/styles/custom-style.css
@@ -1554,6 +1554,10 @@ blockquote
 {
     padding: 0 30px;
 }
+.padding30-0
+{
+    padding: 30px 0;
+}
 .margin-top-25
 {
     margin-top: 25px;
